# decrippter2_ml

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml
beta_feature_extraction/: all_feature_extrac.py
classifiers_scripts/: classifier_class.py  nn.py  nn_svm.py  svm.py
data_augmentation/: augment_dataset.py
data_parsing/: MIBiG_parsing.py  access_ncbi_sequence.py  antiSMASH_parsing.py  main.py  parse_fastas.py  parse_gbk.py  repo.json
decrippter2_ml/: __init__.py  main.py
discarded_jsons/: BGC0002854.json  BGC0002922.json  BGC0003046.json  BGC0003121.json  BGC0003123.json
download_manager/: download_manager.py
feature_extraction/: blast_manager.py  feature_extraction.py  feature_list.json  header_list.json  ripp_class.py  sequence_manager.py
feature_extraction_manager/: blast_manager.py  feature_extraction.py  header_list.json  nsp3_manager.py  sequence_manager.py
json_data/: BGC0000468.json  BGC0000469.json  BGC0000470.json  BGC0000471.json  BGC0000472.json  BGC0000473.json  BGC0000474.json  BGC0000475.json  BGC0000476.json  BGC0000477.json  BGC0000478.json  BGC0000479.json  BGC0000480.json  BGC0000482.json  BGC0000483.json  BGC0000484.json  BGC0000485.json  BGC0000486.json  BGC0000487.json  BGC0000488.json  BGC0000489.json  BGC0000490.json  BGC0000491.json  BGC0000492.json  BGC0000493.json  BGC0000494.json  BGC0000495.json  BGC0000496.json  BGC0000497.json  BGC0000498.json  BGC0000499.json  BGC0000500.json  BGC0000501.json  BGC0000502.json  BGC0000503.json  BGC0000504.json  BGC0000505.json  (+702 more)
(+404 files in other folders)
