[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Organization" = "https://github.com/decrippter2/"
"Repository" = "https://github.com/mite-decrippter2/decrippter2_ml"

[project]
name = "decrippter2_ml"
version = "0.1.0"
description = "Code and data for the machine learning part of decRiPPter2"
readme = "README.md"
requires-python = ">=3.12"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "Mitja M. Zdouc", email = "zdoucmm@gmail.com" }
]

dependencies = [
    "coloredlogs~=15.0",
    "pre-commit~=3.4",
    "pydantic~=2.8",
    "pytest~=7.4",
    "ruff~=0.5"
]

[project.scripts]
decrippter2_ml = "decrippter2_ml.main:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests/",
]
pythonpath = [
    "decrippter2_ml"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # flake8-eradicate/eradicate
    "ERA",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-pie
    "PIE",
    # pygrep
    "PGH",
    # ruff checks
    "RUF",
    # flake8-simplify
    "SIM",
    # flake8-type-checking
    "TCH",
    # flake8-tidy-imports
    "TID",
    # pyupgrade
    "UP",
]
ignore = [
    # whitespace-before-punctuation
    "E203",
    # percent-format-invalid-format
    "E501",
    # mixed-case-variable-in-class-scope
    "N815"
]